Closed Bug 1598330 Opened 4 years ago Closed 4 years ago

Assertion failure: sInServoTraversal || NS_IsMainThread(), at /builds/worker/workspace/build/src/obj-firefox/dist/include/mozilla/ServoUtils.h:34

Categories

(Core :: Preferences: Backend, defect, P3)

Unspecified
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla73
Tracking Status
firefox-esr68 --- wontfix
firefox71 --- wontfix
firefox72 --- wontfix
firefox73 --- fixed

People

(Reporter: bc, Assigned: emilio)

References

()

Details

(Keywords: assertion, reproducible)

Attachments

(4 files)

Attached file log
  1. https://messages.google.com/web/conversations
    shutdown browser. to repeat, clear cache and history.
  2. Assert Nightly Linux
Assertion failure: sInServoTraversal || NS_IsMainThread(), at /builds/worker/workspace/build/src/obj-firefox/dist/include/mozilla/ServoUtils.h:34
#01: nsresult mozilla::Internals::GetPrefValue<int*>(char const*, int*&&, mozilla::PrefValueKind) [modules/libpref/Preferences.cpp:4356]
#02: mozilla::Preferences::AddIntVarCache(int*, nsTSubstring<char> const&, int) [modules/libpref/Preferences.cpp:5145]
#03: mozilla::dom::TouchEvent::PrefEnabled(nsIDocShell*) [dom/events/TouchEvent.cpp:239]
#04: mozilla::EventListenerManager::AddEventListenerInternal(mozilla::dom::CallbackObjectHolder<mozilla::dom::EventListener, nsIDOMEventListener>, mozilla::EventMessage, nsAtom*, mozilla::EventListenerFlags const&, bool, bool) [dom/events/EventListenerManager.cpp:399]
#05: mozilla::EventListenerManager::AddEventListenerByType(mozilla::dom::CallbackObjectHolder<mozilla::dom::EventListener, nsIDOMEventListener>, nsTSubstring<char16_t> const&, mozilla::EventListenerFlags const&, mozilla::dom::Optional<bool> const&) [dom/events/EventListenerManager.cpp:711]
#06: mozilla::EventListenerManager::AddEventListener(nsTSubstring<char16_t> const&, mozilla::dom::CallbackObjectHolder<mozilla::dom::EventListener, nsIDOMEventListener>, mozilla::dom::AddEventListenerOptionsOrBoolean const&, bool) [dom/events/EventListenerManager.cpp:1386]
#07: mozilla::EventListenerManager::AddEventListener(nsTSubstring<char16_t> const&, mozilla::dom::EventListener*, mozilla::dom::AddEventListenerOptionsOrBoolean const&, bool) [dom/events/EventListenerManager.h:261]
#08: mozilla::dom::EventTarget_Binding::addEventListener(JSContext*, JS::Handle<JSObject*>, mozilla::dom::EventTarget*, JSJitMethodCallArgs const&) [s3:gecko-generated-sources:540ca8e019c6bea2c8eb1b5b01346d642ed9dbf443642505efaae7c1f541a047b6bfeceb81f5d021ac0886f4a1e7bde83ff79d8927c171599d9623f963b60711/dom/bindings/EventTargetBinding.cpp::640]
#09: bool mozilla::dom::binding_detail::GenericMethod<mozilla::dom::binding_detail::MaybeCrossOriginObjectThisPolicy, mozilla::dom::binding_detail::ThrowExceptions>(JSContext*, unsigned int, JS::Value*) [dom/bindings/BindingUtils.cpp:3155]
#10: ??? (???:???)
Attached file log2
Attachment #9110573 - Attachment description: log2 libxul.so!js::GlobalHelperThreadState::~GlobalHelperThreadState() [HelperThreads.h:66531295716a76515be6e24774d788dc4ed8ecdf : 0 + 0x62] → log2

The priority flag is not set for this bug.
:njn, could you have a look please?

For more information, please visit auto_nag documentation.

Flags: needinfo?(n.nethercote)

Emilio, any ideas about this?

Flags: needinfo?(n.nethercote) → needinfo?(emilio)
Priority: -- → P3

This means that DOM workers are calling into prefs off the main thread. Normally it'd be easy enough to move that varcache to a proper StaticPref (maybe worth doing anyway), but in this case it also does a bunch of non-thread-safe widget stuff.

I can fix this, though this is not related at all with my code :)

Assignee: nobody → emilio
Flags: needinfo?(emilio)

It does a bunch of widget stuff which is not thread-safe.

Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b68ad790a252
Don't check touch event support off the main thread. r=smaug
https://hg.mozilla.org/integration/autoland/rev/0e8f4c40363e
Convert dom.w3c_touch_events.enabled to a static pref. r=njn
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla73

Doesn't sound like this is something we need to worry about uplifting, but feel free to nominate if that's wrong.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: