Bug 1598330 - Convert dom.w3c_touch_events.enabled to a static pref. r=njn

Differential Revision: https://phabricator.services.mozilla.com/D56312

--HG--
extra : moz-landing-system : lando