widget/nsBaseWidget.cpp
@@ -906,7 +906,7 @@ void nsBaseWidget::ConfigureAPZCTreeManager() {
   // When APZ is enabled, we can actually enable raw touch events because we
   // have code that can deal with them properly. If APZ is not enabled, this
   // function doesn't get called.
-  if (Preferences::GetInt("dom.w3c_touch_events.enabled", 0) ||
+  if (StaticPrefs::dom_w3c_touch_events_enabled() ||
       StaticPrefs::dom_w3c_pointer_events_enabled()) {
     RegisterTouchWindow();
   }
